Bug 168110 - Placeholder text is visible in presentation mode
Summary: Placeholder text is visible in presentation mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2025-08-26 07:34 UTC by Gabor Kelemen (Collabora)
Modified: 2026-01-22 05:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Impress (56.86 KB, application/vnd.oasis.opendocument.presentation)
2025-08-26 07:34 UTC, Gabor Kelemen (Collabora)
Details
How it looks in windowed presentation mode (196.17 KB, image/png)
2025-08-26 07:35 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-08-26 07:34:25 UTC
Created attachment 202512 [details]
Example file from Impress

The attached file has a single placeholder with no custom text.

Upon starting the presentation this placeholder is visible, but it should not.

1. Open attached file
2. Press F5 to start the presentation
-> Click to add Title text is visible and the colorful background of the placeholder shape (which is currently b/w for me in master, but likely just because of some unrelated issue)

This should be visible only if there is custom text.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 953a4159ba48b2901e6b1660fc89960fcaa87b0c
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

This seems to have started in 24.8 with

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e136900e7a971385be9367a3dcaedea54d1e7207

author Balazs Varga <balazs.varga.extern@allotropia.de> 2024-02-29 16:34:45 +0100
committer Balazs Varga <balazs.varga.extern@allotropia.de> 2024-03-22 11:44:16 +0100
commit e136900e7a971385be9367a3dcaedea54d1e7207 (patch)

tdf#159258 sd: fix to show objects in slideshow if they have
Comment 1 Gabor Kelemen (Collabora) 2025-08-26 07:35:20 UTC
Created attachment 202513 [details]
How it looks in windowed presentation mode

This should be entirely empty.
Comment 2 Gabor Kelemen (Collabora) 2025-08-26 07:52:01 UTC
(In reply to Gabor Kelemen (allotropia) from comment #1)
> Created attachment 202513 [details]
> How it looks in windowed presentation mode
> 
> This should be entirely empty.

To clarify, the colorful background of the shape and border line should be visible, just the placeholder text not.
Comment 3 BogdanB 2025-08-27 04:47:13 UTC
Visibile in prsentation mode in 
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dc4a23aab2e3e1f393193665918725cc74e8424b
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Also in
Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2026-01-09 07:22:03 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fcfe97f53a83f478476ddd2858463e2a5724a92c

tdf#168110 - sd fix Placeholder default text is visible

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Jazevedo 2026-01-09 09:57:35 UTC
The fix tested ok for me on: 

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: cc47577dbf5876dd9804305f5fe33c836d80b2c1
CPU threads: 20; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: pt-PT (pt_PT.UTF-8); UI: en-US
Calc: threaded

Thanks for the fix Balazs
Comment 6 Commit Notification 2026-01-12 14:22:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/9b749d9fa7963ad67102986b4f5b51a2c57ef89d

tdf#168110 - sd fix Placeholder default text is visible

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.