tdf#168110 - sd fix Placeholder default text is visible

in presentation mode

Do not render empty pres objects texts in slideshow.

follow-up of commits:
e136900e7a971385be9367a3dcaedea54d1e7207
(tdf#159258 sd: fix to show objects in slideshow if they have)
d323976fd6d560a9b91da3e7833dfbe9f6b78f39
(tdf#159258 SD: SS: disable placeholdertext in image)

co-author: Armin Le Grand <Armin.LeGrand@collabora.com>

Change-Id: I6127cdc36a27dfeac79881b57b9b8cbf963c9d3a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195857
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196353
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
Tested-by: Jenkins