svx/source/sdr/contact/objectcontactofpageview.cxx
@@ -60,6 +60,14 @@ namespace sdr::contact
             : Idle(pDebugName)
             , mrPageWindow(rPageWindow)
         {
+            // Set EditViewActive early at local ViewInformation2D. Usually this
+            // gets updated at the 1st paint (see updateViewInformation2D calls).
+            // To be independent of this mechanism and prepared for cases where
+            // e.g. a HitTest is used before paint, initialize it here already.
+            // This is the ObjectContact of PageView, so usage is bound to
+            // EditView visualization anyways
+            setEditViewActiveEarly();
+
             // init PreviewRenderer flag
             setPreviewRenderer(static_cast<SdrPaintView&>(rPageWindow.GetPageView().GetView()).IsPreviewRenderer());
 
@@ -225,8 +233,8 @@ namespace sdr::contact
                 aNewViewInformation2D.setTextEditActive(true);
 
             // this is the EditView repaint, provide that information,
-            // but only if we do not export to metafile
-            if (!isOutputToRecordingMetaFile())
+            // but only if we do not export to metafile and do not prepare a SlideShow
+            if (!isOutputToRecordingMetaFile() && !comphelper::LibreOfficeKit::isSlideshowRendering())
                 aNewViewInformation2D.setEditViewActive(true);
 
             updateViewInformation2D(aNewViewInformation2D);
